# serializer version: 1
# name: test_analyze_conllu[assets/texts/empty-node.conllu]
  set({
    'text',
    'token',
  })
# ---
# name: test_analyze_conllu[assets/texts/long-token-to-text.conllu]
  set({
    'sent_id',
    'sentence',
    'text',
    'token',
  })
# ---
# name: test_analyze_conllu[assets/texts/multiword.conllu]
  set({
    'text',
    'token',
  })
# ---
# name: test_analyze_conllu[assets/texts/space-after-no.conllu]
  set({
    'text',
    'token',
  })
# ---
# name: test_parse[empty-node]
  _CallList([
    _Call(
      tuple(
        'Sue likes coffee and Bill tea ',
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_parse[empty-node].1
  _CallList([
    _Call(
      tuple(
        list([
          'sentence',
          'sentence',
          'text',
          'token',
          'token:baseform',
          'token:id',
        ]),
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_parse[long-token-to-text]
  _CallList([
    _Call(
      tuple(
        'Moodymanni ehk Kenny Dixon Jnr võid näha ja lausa liigutamas aadressil proto.groovetech.com/mk-demf.rxml?file=/demf/mainstage/day2/mainstageday2-kennydixonjr.rm (Antes Edition) Filmimuusika loomine on mitmes mõttes erinev kontserdisaalis ette kantava teose kirjutamisest, sisaldades nii kitsendusi kui ka ahvatlevaid võimalusi.',
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_parse[long-token-to-text].1
  _CallList([
    _Call(
      tuple(
        list([
          'sentence',
          'sentence',
          'sentence:sent_id',
          'text',
          'token',
          'token:baseform',
          'token:dephead',
          'token:deprel',
          'token:deps',
          'token:id',
          'token:misc',
          'token:ufeats',
          'token:upos',
          'token:xpos',
        ]),
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_parse[multiword]
  _CallList([
    _Call(
      tuple(
        'vámonos al mar ',
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_parse[multiword].1
  _CallList([
    _Call(
      tuple(
        list([
          'sentence',
          'sentence',
          'text',
          'token',
          'token:baseform',
          'token:id',
        ]),
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_parse[space-after-no]
  _CallList([
    _Call(
      tuple(
        'Er arbeitet fürs FBI (deutsch etwa: „Bundesamt für Ermittlung“). ',
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_parse[space-after-no].1
  _CallList([
    _Call(
      tuple(
        list([
          'sentence',
          'sentence',
          'text',
          'token',
          'token:baseform',
          'token:deprel',
          'token:id',
          'token:misc',
          'token:upos',
        ]),
      ),
      dict({
      }),
    ),
  ])
# ---
